# matlab_damoe_ws

./: CMakeLists.txt  CMakePresets.json  README.md
config/: serial.json
include/: serial.hpp
src/: main.cpp  serial.cpp
stewart_V2_c/examples/: main.c  main.h
stewart_V2_c/inc/: cosd.h  cumtrapz.h  inv.h  minOrMax.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h  sind.h  stewart_control_function_V4_part_test_1.h  stewart_control_function_V4_part_test_1_data.h  stewart_control_function_V4_part_test_1_emxutil.h  stewart_control_function_V4_part_test_1_initialize.h  stewart_control_function_V4_part_test_1_rtwutil.h  stewart_control_function_V4_part_test_1_terminate.h  stewart_control_function_V4_part_test_1_types.h  svd.h  xaxpy.h  xdotc.h  xnrm2.h  xrot.h  xrotg.h  xswap.h
stewart_V2_c/src/: cosd.c  cumtrapz.c  inv.c  minOrMax.c  rtGetInf.c  rtGetNaN.c  rt_nonfinite.c  sind.c  stewart_control_function_V4_part_test_1.c  stewart_control_function_V4_part_test_1_data.c  stewart_control_function_V4_part_test_1_emxutil.c  stewart_control_function_V4_part_test_1_initialize.c  stewart_control_function_V4_part_test_1_rtwutil.c  stewart_control_function_V4_part_test_1_terminate.c  svd.c  xaxpy.c  xdotc.c  xnrm2.c  xrot.c  xrotg.c  xswap.c
